--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "app:watch": "npx shadow-cljs watch app",
     "shadow:release": "npx shadow-cljs release app",
     "watch": "run-p -l *:watch",
-    "release": "run-s *:release",
-    "repl": "npx shadow-cljs clj-repl"
+    "release": "run-s *:release"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -27,6 +26,9 @@
   },
   "dependencies": {
     "@codemirror/language": "^6.6.0",
+    "webpack": "^5.83.1",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.1.1",
     "@codemirror/legacy-modes": "^6.3.1",
     "@supabase/supabase-js": "^2.25.0",
     "@tailwindcss/forms": "^0.5.3",
